syntax = "proto3";

package transaction;

import "protos/models/transaction/transaction.proto";
import "protos/requests/transaction/transaction_request.proto";

option java_multiple_files = true;
option java_package = "common.request.protos";
option java_outer_classname = "TransactionResponseProtos";

message TransactionResponseProto {
  string object_class = 1;
  string version = 2;

  transaction.TransactionRequestProto create_transaction_request = 20;

  repeated transaction.TransactionProto transaction_response = 30;
}


